2016-04-25 Roman
- DAQ: Initialization of redundancy of TController object some changed to enabled by default. That will next checked into a complex environment.
- DAQ.BCM2835: Expanded for access to GPIO by static functions which significant faster ones.
- FIX:DAQ.JavaLikeCalc: setNoTransl() at the attributes value (DB field "DEF") loading disabled by some problematic and no a sence.
- Special.FLibSYS: The time functions are appended by tmSleep() for faster access to the short sleeping provides.
- Transport.{SSL,Sockets}: Buffer's size of getservbyname() some decreased.
- FIX:UI.QTCfg: Read only of selected items are fixed in alignment with other items in single row.
    Changed user apply is fixed.


2016-04-20 Roman
- DB.LibsDB.OscadaLibs.db: Templates base.{digAlarm,anUnif,anUnifSign} expanded by prevent main execution into cycles
    of the starting (f_start) and stoping (f_stop). Template base.anUnifSign also expanded for EVAL detection lag into parameter "Tf".
- DB.Model.AGLKS.St.db: Mostly parameters of LogLevPrm.experiment object of controller set into attribute "Tf" to value 2.
- !!!!:SYS: Resources locking in RW object "Res" expanded by functions (synonyms) lock(), tryLock() and unlock().
    All module's subsystems' version set (started) to 10 for the Work version and prevent in casual the modules coonect from LTS and vice versa.
    !!!!:The redundancy significant expanded to moving redundancy hosts management to the system level, from exclusively DAQ subsystem.
    Additional managing time macro FTM2 is added.
    User API function SYS.sleep() expanded to accept first argument of time in seconds as float and allow to set here up to nanoseconds.
    User API function SYS.sleep() limited to maximum wait time it is standard interface's timeout (5 seconds) and targeted mostly
	for low level device's short time lags.
- !!!!:Archives: Redundancy for message archives added.
    TArchiveS::messPut() expanded to write messages independent to the alarms table.